# MallocWorld

./: .gitignore  CMakeLists.txt  build.sh  mallocworld  monster.mw  res.mw  test.c  test.h  test.mw  test2.mw
Jeux/: Malloc_World_Linux
Jeux/items/: diamond_chestplate.mw  diamond_sword.mw  iron_hammer.mw  iron_sword.mw  ore_iron.mw  ore_stone.mw  plant_hemp.mw  potion_life_1.mw  stone_axe.mw  (+9 more)
includes/: craft.h  game.h  id.h  inventory.h  item.h  map.h  monster.h  perlin.h  player.h  resource.h  respawn.h  save.h  terminalManager.h  utils.h
items/: _template_item.mw  diamond_hammer.mw  diamond_spear.mw  diamond_sword.mw  iron_axe.mw  iron_chestplate.mw  iron_hoe.mw  iron_pickaxe.mw  iron_spear.mw  iron_sword.mw  ore_diamond.mw  ore_stone.mw  plant_grass.mw  plant_lavender.mw  potion_life_1.mw  potion_life_2.mw  potion_life_3.mw  stone_axe.mw  stone_hammer.mw  stone_hoe.mw  stone_sword.mw  template_item.mw  wood_axe.mw  wood_beech.mw  wood_fir.mw  wood_hoe.mw  wood_oak.mw  wood_pickaxe.mw  wood_sword.mw
monsters/: .fuse_hidden000175f700000084  alien  cwalker  laura  m1.mw  m2.mw  m3.mw  m4.mw  m5.mw  m6.mw  m7.mw  m8.mw  m9.mw  monster.mw  orc.mw  pyramidhead.mw  slender  slfd.mw  spider.mw  squeleton.mw  template_monster.mw  witch  zombie.mw
resources/: ore_diamond.mw  ore_iron.mw  ore_stone.mw  plant_grass.mw  res.mw  resource_template.mw  wood_beech.mw
src/: craft.c  game.c  inventory.c  item.c  main.c  mainPlayer.c  map.c  monster.c  perlin.c  player.c  resource.c  respawn.c  save.c  terminalManager.c  testPlayer.c  utils.c
templates/: _template_item.mw
(+10 files in other folders)
